--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/stack": "^6.0.11",
     "react": "17.0.2",
     "react-native": "0.66.2",
+    "react-native-animatable": "^1.3.3",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-elements": "^3.4.2",
     "react-native-fast-image": "^8.5.11",
@@ -26,6 +27,8 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
+    "react-native-splash-screen": "^3.2.0",
+    "react-native-toggle-element": "^1.0.1",
     "react-native-vector-icons": "^9.0.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
