--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "react-native-fast-image": "^8.5.11",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.3",
+    "react-native-maps": "0.29.4",
     "react-native-modal-datetime-picker": "^10.2.0",
     "react-native-reanimated": "^1.13.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
     "react-native-splash-screen": "^3.2.0",
+    "react-native-star-rating": "^1.1.0",
     "react-native-toggle-element": "^1.0.1",
     "react-native-vector-icons": "^9.0.0",
     "react-redux": "^7.2.0",
