--- a/ios/UberEat/Info.plist
+++ b/ios/UberEat/Info.plist
@@ -72,6 +72,7 @@
 		<string>Montserrat-Bold.ttf</string>
 		<string>Montserrat-Light.ttf</string>
 		<string>Montserrat-SemiBold.ttf</string>
+		<string>Montserrat-Medium.ttf</string>
 	</array>
 </dict>
 </plist>
