--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native": "0.66.2",
     "react-native-animatable": "^1.3.3",
     "react-native-app-intro-slider": "^4.0.4",
+    "react-native-date-picker": "^4.1.1",
     "react-native-elements": "^3.4.2",
     "react-native-fast-image": "^8.5.11",
     "react-native-gesture-handler": "^1.10.3",
