--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react-native-elements": "^3.4.2",
     "react-native-fast-image": "^8.5.11",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-crop-picker": "^0.37.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.3",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-maps": "0.29.4",
     "react-native-modal-datetime-picker": "^10.2.0",
     "react-native-reanimated": "^1.13.1",
