--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
+    "moment": "^2.29.1",
     "react": "17.0.2",
     "react-native": "0.66.2",
     "react-native-animatable": "^1.3.3",
@@ -22,12 +23,15 @@
     "react-native-date-picker": "^4.1.1",
     "react-native-elements": "^3.4.2",
     "react-native-fast-image": "^8.5.11",
+    "react-native-geolocation-service": "^5.3.0-beta.3",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-crop-picker": "^0.37.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.3",
+    "react-native-keyboard-aware-view": "0.0.14",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-maps": "0.29.4",
     "react-native-modal-datetime-picker": "^10.2.0",
+    "react-native-paper": "^4.10.1",
     "react-native-reanimated": "^1.13.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^3.3.2",
@@ -37,6 +41,7 @@
     "react-native-toggle-element": "^1.0.1",
     "react-native-vector-icons": "^9.0.0",
     "react-redux": "^7.2.0",
+    "react-usestateref": "^1.0.8",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0"
