--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "react-native": "0.66.2",
     "react-native-animatable": "^1.3.3",
     "react-native-app-intro-slider": "^4.0.4",
+    "react-native-confirmation-code-field": "^7.2.0",
     "react-native-date-picker": "^4.1.1",
     "react-native-elements": "^3.4.2",
     "react-native-fast-image": "^8.5.11",
+    "react-native-file-viewer": "^2.1.5",
+    "react-native-fs": "^2.18.0",
     "react-native-geolocation-service": "^5.3.0-beta.3",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-crop-picker": "^0.37.2",
@@ -44,7 +47,8 @@
     "react-usestateref": "^1.0.8",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
