--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native": "0.66.2",
     "react-native-animatable": "^1.3.3",
     "react-native-app-intro-slider": "^4.0.4",
+    "react-native-calendars": "^1.1275.0",
     "react-native-confirmation-code-field": "^7.2.0",
     "react-native-date-picker": "^4.1.1",
     "react-native-elements": "^3.4.2",
