--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/datetimepicker": "^3.5.2",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-firebase/app": "^14.2.4",
+    "@react-native-firebase/messaging": "^14.2.4",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
     "moment": "^2.29.1",
@@ -36,6 +38,7 @@
     "react-native-maps": "0.29.4",
     "react-native-modal-datetime-picker": "^10.2.0",
     "react-native-paper": "^4.10.1",
+    "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "^1.13.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^3.3.2",
