--- a/package.json
+++ b/package.json
@@ -32,17 +32,22 @@
     "react-native-geolocation-service": "^5.3.0-beta.3",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-crop-picker": "^0.37.2",
+    "react-native-image-slider": "^2.0.3",
+    "react-native-image-slider-box": "^1.1.17",
     "react-native-keyboard-aware-scroll-view": "^0.9.3",
     "react-native-keyboard-aware-view": "0.0.14",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-localization": "^2.3.1",
     "react-native-maps": "0.29.4",
     "react-native-modal-datetime-picker": "^10.2.0",
     "react-native-paper": "^4.10.1",
     "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "^1.13.1",
     "react-native-responsive-screen": "^1.4.2",
+    "react-native-restart": "0.0.24",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
+    "react-native-share": "^7.3.6",
     "react-native-splash-screen": "^3.2.0",
     "react-native-star-rating": "^1.1.0",
     "react-native-toggle-element": "^1.0.1",
